BackEnd/k8s/cloudflare-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: "<CLOUDFLARE_IP_RANGES>"
